test_programs/compile_failure/noirc_frontend_tests_cast_signed_i8_to_field_must_error_1/src/main.nr

        fn main() {
            assert((-1 as i8) as Field != 0);
        }
    